--- a/_includes/views/pagination-item.html
+++ b/_includes/views/pagination-item.html
@@ -41,10 +41,10 @@
     {%- endif -%}
     <span class="post-reading-time left-vsplit"><i class="fa fa-clock-o"></i> {{ reading_time }}</span>
     {%- if page.wiptag -%}
-    <span class="post-wiptag left-vsplit"><i class="fa-solid fa-wrench"></i></i> {{ page.wiptag | escape }}</span>
+    <span class="post-wiptag left-vsplit"><i class="fa fa-wrench"></i></i> {{ page.wiptag | escape }}</span>
     {%- endif -%}
     {%- if page.factcheck -%}
-    <span class="post-factcheck left-vsplit"><i class="fa-sharp fa-solid fa-trophy"></i></i></i> {{ page.factcheck | escape }}</span>
+    <span class="post-factcheck left-vsplit"><i class="fa fa-trophy"></i></i></i> {{ page.factcheck | escape }}</span>
     {%- endif -%}
   </div>
   <div class="post-excerpt">
