--- a/_sass/yat.scss
+++ b/_sass/yat.scss
@@ -2,14 +2,14 @@
 
 // Define defaults for each variable.
 
-$base-font-family: Helvetica Neue, Helvetica, Arial, sans-serif, !default;
-$base-font-size: 14px !default;
+$base-font-family: Lexend, Faculty Glyphic, Onest, Outfit, !default;
+$base-font-size: 15px !default;
 $base-font-weight: 400 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
 $base-line-height: 1.6 !default;
 $base-transition-duration: 0.3s !default;
 
-$spacing-unit:     30px !default;
+$spacing-unit:     5px !default;
 
 $text-color:       #1d1d1f !default;
 $background-color: #fff !default;
