--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -336,7 +336,7 @@ table {
 /* note */
 .note {
   padding: 20px;
-  background-color: #b6d7a8; 
+  background-color: #6aa84f; 
   color: white;
   margin-bottom: 15px;
 }
