--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -328,7 +328,7 @@ table {
 /* alert */
 .alert {
   padding: 20px;
-  background-color: #d4a823; 
+  background-color: #b18d21; 
   color: white;
   margin-bottom: 15px;
 }
@@ -336,7 +336,7 @@ table {
 /* note */
 .note {
   padding: 20px;
-  background-color: #38761d; 
+  background-color: #274e13; 
   color: white;
   margin-bottom: 15px;
 }
