--- a/_layouts/links_and_sources.html
+++ b/_layouts/links_and_sources.html
@@ -5,5 +5,7 @@ hidden:
   - navigator
   - related_posts
 ---
-<h2>Links & Sources</h2>
+<h2></h2>
+<h1 style="font-size: 27.5px">➤ Links & Sources</h1>
+<hr></br>
 {{ content }}
