--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -3,6 +3,9 @@ layout: framework
 sidebar: tag-list
 ---
 
+<h1 style="font-size: 27.5px">➤ Tags</h1>
+<hr></br>
+
 {%- if site.posts.size > 0 -%}
 
   {%- include functions.html func='log' level='debug' msg='Get tags value' -%}
