--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -3,6 +3,9 @@ layout: framework
 sidebar: category-list
 ---
 
+<h1 style="font-size: 27.5px">➤ Topics</h1>
+<hr></br>
+
 {%- if site.posts.size > 0 -%}
 
   {%- include functions.html func='log' level='debug' msg='Get value' -%}
