--- a/_includes/extensions/mermaid.html
+++ b/_includes/extensions/mermaid.html
@@ -1,4 +1,5 @@
 <!------------- Add Mermaid Support -------------------->
+<script>
       window.addEventListener('DOMContentLoaded', function(){
                  var config = {
                       startOnLoad:true,
@@ -13,4 +14,5 @@
                   
                   mermaid.initialize(config);
               },false);
+</script>
 <!------------------------------------------------------>
