--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,4 +5,10 @@ subheading: 'Your awesome subheading'
 banner: 'default'
 ---
 
+<style>
+body {
+  background-image: url('/assets/ps2wiki_bg.jpg');
+}
+</style>
+
 {{ content }}
