--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,7 +7,7 @@ banner: 'default'
 
 <style>
 body {
-  background-image: url('/assets/ps2wiki_bg.jpg');
+  background-image: url('/assets/images/ps2wiki_bg.jpg');
 }
 </style>
 
