--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@ heading: 'Your awesome heading'
 subheading: 'Your awesome subheading'
 banner: 'default'
 ---
-<h1 style="font-family: Faculty Glyphic; text-align: center; font-size: 3.5em; font-weight: bold; text-decoration: underline">The PS2 Homebrew Wiki</h1>
+<h1 style="font-family: Faculty Glyphic; text-align: center; font-size: 3.5em; font-weight: bold; text-decoration: underline; color: #111111">The PS2 Homebrew Wiki</h1>
 <h1 style="font-size: 1.35em; text-align: center; font-weight: bold; color: #99b6b9">From Apps to Exploits, Games to Mods, the one website for all things PS2 Homebrew</h1>
 </br></br>
 
