--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,7 +6,7 @@ banner: 'default'
 ---
 <h1 style="font-family: Faculty Glyphic; text-align: center; font-size: 3.5em; font-weight: bold; text-decoration: underline; color: #ffffff">The PS2 Homebrew Wiki</h1>
 <h1 style="font-size: 1.35em; text-align: center; font-weight: bold; color: #99b6b9">From Apps to Exploits, Games to Mods, the one website for all things PS2 Homebrew</h1>
-</br></br>
+</br></br></br>
 
 <style>
 body {
@@ -14,4 +14,5 @@ body {
 }
 </style>
 
+<div style="border: 2px outset #ffffff; background-color: #384b5c" class="home_latest_posts">
 {{ content }}
