--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,5 +14,5 @@ body {
 }
 </style>
 
-<div style="border: 2px outset #ffffff; background-color: #384b5c" class="home_latest_posts">
+<div style="padding: 25px; border: 3px outset #ffffff; background-color: #1e2d2e" class="home_latest_posts">
 {{ content }}
