--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,5 +14,5 @@ body {
 }
 </style>
 
-<div style="padding: 25px; border: 3px outset #ffffff; background-color: #1e2d2e" class="home_latest_posts">
+<div style=" border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #152526" class="home_latest_posts">
 {{ content }}
