--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,5 +14,5 @@ body {
 }
 </style>
 
-<div style=" border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #0c1516" class="home_latest_posts">
+<div style=" border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #0c1516; align: left" class="home_latest_posts">
 {{ content }}
