--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,7 +14,13 @@ body {
 }
 </style>
 
-<div style=" left: 525px; right: 25px; position: absolute; border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #0c1516; align: right" class="home_site_guide">
+<div style=" left: 25px; right: 500px; position: absolute; border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #0c1516; align: left" class="home_latest_posts">
+  <h1 style="font-size: 27.5px; color: #ffffff">➤ Latest Posts</h1>
+  <hr></br>
+  {{ content }}
+</div>
+
+<div style=" left: 825px; right: 25px; position: absolute; border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #0c1516; align: right" class="home_site_guide">
   <h1 style="font-size: 27.5px; color: #ffffff">➤ Site Guide</h1>
   <h3 href="https://ps2wiki.github.io/about.html">➽ About</h3>
   Introduction to the site
@@ -34,7 +40,4 @@ body {
   <h3 href="https://ps2wiki.github.io/archives.html">➽ Archives</h3>
   Yearly site-wide Archive
   <hr></br>
-</div>
-<div style=" left: 25px; right: 500px; position: absolute; border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #0c1516; align: left" class="home_latest_posts">
-{{ content }}
 </div>
