--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,3 +19,27 @@ body {
   <hr></br>
   {{ content }}
 </div>
+
+</br></br>
+
+<div style=" left: 825px; right: 25px; position: absolute; border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #0c1516; align: right" class="home_site_guide">
+  <h1 style="font-size: 27.5px; color: #ffffff">➤ Site Guide</h1>
+  <h3 href="https://ps2wiki.github.io/about.html">➽ About</h3>
+  Introduction to the site
+  <hr></br>
+  <h3 href="https://ps2wiki.github.io/get_started.html">➽ Get Started</h3>
+  Everything you need to 'Get Started' with PS2 Modding! (>ᴗ•)
+  <hr></br>
+  <h3 href="https://ps2wiki.github.io/links_and_sources.html">➽ Links & Sources</h3>
+  Useful links to downloads and other resources
+  <hr></br>
+  <h3 href="https://ps2wiki.github.io/categories.html">➽ Topics</h3>
+  All post content on the site, sorted by topics
+  <hr></br>
+  <h3 href="https://ps2wiki.github.io/tags.html">➽ Tags</h3>
+  Filter content based on #tags
+  <hr></br>
+  <h3 href="https://ps2wiki.github.io/archives.html">➽ Archives</h3>
+  Yearly site-wide Archive
+  <hr></br>
+</div>
