--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,9 +14,10 @@ body {
 }
 </style>
 
-<div style=" left: 25px; right: 500px; position: absolute; border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #0c1516; align: left" class="home_latest_posts">
+<div style="display:inline-block; border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #0c1516; align: left" class="home_latest_posts">
   <h1 style="font-size: 27.5px; color: #ffffff">➤ Latest Posts</h1>
   <hr></br>
+  
   {{ content }}
 </div>
 
