--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,7 +14,7 @@ body {
 }
 </style>
 
-<div style="display: inline-block; border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #0c1516; align: right" class="home_site_guide">
+<div style="left: 1325px; right: 25px; position: absolute;  border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #0c1516; align: right" class="home_site_guide">
   <h1 style="font-size: 27.5px; color: #ffffff">➤ Site Guide</h1>
   <hr></br>
   <h3 href="https://ps2wiki.github.io/about.html">➽ About</h3>
@@ -40,7 +40,15 @@ body {
 </br></br>
 
 <div style="left: 25px; right: 500px; position: absolute; border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #0c1516; align: left" class="home_latest_posts">
+ <div class="articles">
+  {% if page.banner == nil %}
+    {% assign banner = page.title %}
+  {% endif %}
+
   {{ content }}
+
+  {% include views/pagination.html %}
+</div></div>
 
 
 
