--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,32 +14,33 @@ body {
 }
 </style>
 
-<div style="float:right; height:100%; left: 1250px; right: 25px; position: absolute;  border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #0c1516; align: right" class="home_site_guide">
+<div padding-top: 45px>
+<div style="left: 1250px; right: 25px; position: absolute;  border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #0c1516; align: right" class="home_site_guide">
   <h1 style="font-size: 27.5px; color: #ffffff">➤ Site Guide</h1>
   <hr></br>
-  <h3 href="https://ps2wiki.github.io/about.html">➽ About</h3>
+  <h3><a href="https://ps2wiki.github.io/about.html">➽ About</a></h3>
   Introduction to the site
-  </br></br><hr>
-  <h3 href="https://ps2wiki.github.io/get_started.html">➽ Get Started</h3>
+  </br></br><hr></br>
+  <h3><a href="https://ps2wiki.github.io/get_started.html">➽ Get Started</a></h3>
   Everything you need to 'Get Started' with PS2 Modding! (>ᴗ•)
-  </br></br><hr>
-  <h3 href="https://ps2wiki.github.io/links_and_sources.html">➽ Links & Sources</h3>
+  </br></br><hr></br>
+  <h3><a href="https://ps2wiki.github.io/links_and_sources.html">➽ Links & Sources</a></h3>
   Useful links to downloads and other resources
-  </br></br><hr>
-  <h3 href="https://ps2wiki.github.io/categories.html">➽ Topics</h3>
+  </br></br><hr></br>
+  <h3><a href="https://ps2wiki.github.io/categories.html">➽ Topics</a></h3>
   All post content on the site, sorted by topics
-  </br></br><hr>
-  <h3 href="https://ps2wiki.github.io/tags.html">➽ Tags</h3>
+  </br></br><hr></br>
+  <h3><a href="https://ps2wiki.github.io/tags.html">➽ Tags</a></h3>
   Filter content based on #tags
-  </br></br><hr>
-  <h3 href="https://ps2wiki.github.io/archives.html">➽ Archives</h3>
+  </br></br><hr></br>
+  <h3><a href="https://ps2wiki.github.io/archives.html">➽ Archives</a></h3>
   Yearly site-wide Archive
-  </br></br><hr>
-</div>
+  </br></br><hr></br>
+</div></div>
 
 </br></br>
 
-<div style="float: left; left: 25px; right: 500px; position: absolute; border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #0c1516; align: left" class="home_latest_posts">
+<div style="left: 25px; right: 500px; position: absolute; border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #0c1516; align: left" class="home_latest_posts">
  <div class="articles">
   {% if page.banner == nil %}
     {% assign banner = page.title %}
@@ -47,9 +48,8 @@ body {
 
   {{ content }}
 
-  {% include views/pagination.html %}
 </div></div>
-
+{% include views/pagination.html %}
 
 
 
