--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,8 +14,8 @@ body {
 }
 </style>
 
-<div padding-top: 45px>
-<div style="left: 1250px; right: 25px; position: absolute;  border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #0c1516; align: right" class="home_site_guide">
+<div left: 1250px; right: 25px; position: absolute; padding-top: 45px>
+<div style="border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #0c1516; align: right" class="home_site_guide">
   <h1 style="font-size: 27.5px; color: #ffffff">➤ Site Guide</h1>
   <hr></br>
   <h3><a href="https://ps2wiki.github.io/about.html">➽ About</a></h3>
@@ -47,8 +47,9 @@ body {
   {% endif %}
 
   {{ content }}
-
+  {% include views/pagination.html %}
 </div></div>
+
 {% include views/pagination.html %}
 
 
