--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,7 +14,8 @@ body {
 }
 </style>
 
-<div style="left: 1250px; right: 25px; position: absolute; padding-top: 45px">
+<div>
+<div style="left: 1250px; right: 25px; position: absolute; padding-top: 50px">
 <div style="border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #0c1516; align: right" class="home_site_guide">
   <h1 style="font-size: 27.5px; color: #ffffff">➤ Site Guide</h1>
   <hr></br>
@@ -51,5 +52,5 @@ body {
 </div></div>
 
 {%- include views/footer.html -%}
-
+</div>
 
