--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,7 +15,7 @@ body {
 </style>
 
 <div>
-<div style="left: 1250px; right: 25px; position: absolute; padding-top: 50px">
+<div style="left: 1250px; right: 25px; padding-top: 50px">
 <div style="border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #0c1516; align: right" class="home_site_guide">
   <h1 style="font-size: 27.5px; color: #ffffff">➤ Site Guide</h1>
   <hr></br>
@@ -41,7 +41,7 @@ body {
 
 </br></br>
 
-<div style="left: 25px; right: 500px; position: absolute; border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #0c1516; align: left" class="home_latest_posts">
+<div style="left: 25px; right: 500px; border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #0c1516; align: left" class="home_latest_posts">
  <div class="articles">
   {% if page.banner == nil %}
     {% assign banner = page.title %}
