--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,7 +14,7 @@ body {
 }
 </style>
 
-<div>
+<div style="display: flex">
 <div style="left: 1250px; right: 25px; padding-top: 50px">
 <div style="border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #0c1516; align: right" class="home_site_guide">
   <h1 style="font-size: 27.5px; color: #ffffff">➤ Site Guide</h1>
