--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -27,7 +27,7 @@ body {
 </div></div>
 
 </br></br>
-
+<div style="left: 0px; position: absolute">
 <div style="left: 1250px; right: 25px">
 <div style="border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #0c1516; align: right" class="home_site_guide">
   <h1 style="font-size: 27.5px; color: #ffffff">➤ Site Guide</h1>
@@ -51,5 +51,5 @@ body {
   Yearly site-wide Archive
   </br></br><hr></br>
 </div></div>
-</div>
+</div></div>
 
