--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,7 +14,7 @@ body {
 }
 </style>
 
-<div style="display: flex">
+<div style="left: 0px; position: absolute"><div style="display: flex">
 
 <div style="left: 25px; right: 500px; border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #0c1516; align: left" class="home_latest_posts">
  <div class="articles">
@@ -27,7 +27,7 @@ body {
 </div></div>
 
 </br></br>
-<div style="left: 0px; position: absolute">
+
 <div style="left: 1250px; right: 25px">
 <div style="border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #0c1516; align: right" class="home_site_guide">
   <h1 style="font-size: 27.5px; color: #ffffff">➤ Site Guide</h1>
