--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,7 +14,7 @@ body {
 }
 </style>
 
-<div style="left: 0px; position: absolute"><div style="display: flex">
+<div style="left: 0px; position: absolute"; display: flex>
 
 <div style="left: 25px; right: 500px; border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #0c1516; align: left" class="home_latest_posts">
  <div class="articles">
@@ -51,5 +51,5 @@ body {
   Yearly site-wide Archive
   </br></br><hr></br>
 </div></div>
-</div></div>
+</div>
 
