--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,11 +26,9 @@ body {
   {% include views/pagination.html %}
 </div></div>
 
-<div style="padding: 50px">
-  
-</div>
+<div style="padding: 25px"></div>
 
-<div style="left: 1250px; right: 25px">
+<div style="left: 1200px; right: 25px">
 <div style="border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #0c1516; align: right" class="home_site_guide">
   <h1 style="font-size: 27.5px; color: #ffffff">➤ Site Guide</h1>
   <hr></br>
