--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,7 +18,7 @@ body {
 
 <div style="left: 10px; right: 12.5px">
 <div style="border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #0c1516; align: right" class="home_site_guide">
-  <h1 style="font-size: 27.5px; color: #ffffff">➤ Site Guide           </h1>
+  <h1 style="font-size: 27.5px; color: #ffffff">➤ Site Guide</h1>
   <hr></br>
   <h3><a href="https://ps2wiki.github.io/about.html">➽ About</a></h3>
   Introduction to the site
@@ -42,7 +42,7 @@ body {
 
 <div style="padding: 6.25px"></div>
  
-<div style="left: 12.5px; right: 0px; border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #0c1516; align: left" class="home_latest_posts">
+<div style="width: 70%; left: 12.5px; right: 0px; border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #0c1516; align: left" class="home_latest_posts">
  <div class="articles">
   {% if page.banner == nil %}
     {% assign banner = page.title %}
