--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,8 +1,9 @@
 ---
-layout: article
-heading: 'Your awesome heading'
-subheading: 'Your awesome subheading'
-banner: 'default'
+layout: post
+hidden:
+  - header
+  - navigator
+  - related_posts
 ---
 
 <h1 style="font-family: Faculty Glyphic; text-align: center; font-size: 3.5em; font-weight: bold; text-decoration: underline; color: #ffffff">The PS2 Homebrew Wiki</h1>
