--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,5 +1,6 @@
 ---
-layout: articles
+layout: framework
+sidebar: category-list
 heading: 'Your awesome heading'
 subheading: 'Your awesome subheading'
 banner: 'default'
