--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -53,5 +53,10 @@ body {
   {% endif %}
     {{ content }}
   {% include views/pagination.html %}
-</div></div>
+  
+</div>
+  <div>
+    {%- include views/footer.html -%}
+  </div>
+</div>
 </div>
