--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -54,9 +54,7 @@ body {
     {{ content }}
   {% include views/pagination.html %}
   
-</div>
-  <div>
+</div></div><div>
     {%- include views/footer.html -%}
   </div>
-</div>
 </div>
