--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -54,7 +54,7 @@ body {
     {{ content }}
   {% include views/pagination.html %}
   
-</div></div><div>
-    {%- include views/footer.html -%}
-  </div>
+</div></div>
+</div><div>
+  {%- include views/footer.html -%}
 </div>
