--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -55,6 +55,7 @@ body {
   {% include views/pagination.html %}
   
 </div></div>
-</div><div>
+</div>
+<div style="position: fixed; bottom: 0; width: 100%">
   {%- include views/footer.html -%}
 </div>
