--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,7 +16,7 @@ body {
 }
 </style>
 
-<div style="left: 0px; position: absolute; padding: 25px; display: flex">
+<div style="left: 0px; position: absolute; padding: 25px; padding-bottom: 100px; display: flex">
 
 <div style="left: 10px; right: 12.5px">
 <div style="border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #0c1516; align: right" class="home_site_guide">
@@ -55,6 +55,4 @@ body {
   {% include views/pagination.html %}
   
 </div></div>
-</div><div style="position: fixed; bottom: 0; width: 100%">
-  {%- include views/footer.html -%}
-</div>
+
