--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -54,5 +54,7 @@ body {
     {{ content }}
   {% include views/pagination.html %}
   
-</div></div>
-
+</div></div></div>
+<div style="left:0; position: fixed; bottom: 0; width: 100%">
+  {%- include views/footer.html -%}
+</div>
