--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -55,6 +55,27 @@ body {
   {% include views/pagination.html %}
 
 </div></div></div>
-<div style="left:0; position: absolute; bottom: 0; width: 100%">
-  {%- include views/footer.html -%}
-</div>
+
+<footer class="site-footer h-card">
+  <data class="u-url" href="{{ "/" | relative_url }}"></data>
+
+  <div class="wrapper">
+    <div class="site-footer-inner">
+        {%- assign currentYear = 'now' | date: "%Y" -%}
+        {%- assign copyright = site.copyright
+            | replace: '{currentYear}', currentYear
+            | replace: '{author}', site.author
+            | replace: '(c)', '&copy;'
+            | replace: '(p)', '℗'
+            | replace: '(cleft)', '<span class="copyleft">&copy;</span>'
+        -%}
+      <div>{{ copyright }}</div>
+      <div>Powered by <a title="Jekyll is a simple, blog-aware, static site
+      generator." href="https://jekyllrb.com/">Jekyll</a> &amp; <a title="Yat, yet
+      another theme." href="https://github.com/jeffreytse/jekyll-theme-yat">Yat Theme</a>.</div>
+      <div><a title="Link to PS2 Space Discord Server" href="https://discord.gg/kCYbSF6tbx">Join the PS2 Space Discord Server!</a></div>
+      <!-- <div class="footer-col rss-subscribe">Subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></div> -->
+    </div>
+  </div>
+</footer>
+
