--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,6 +16,7 @@ body {
 }
 </style>
 
+<div>
 <div style="left: 0px; position: absolute; padding: 25px; padding-bottom: 100px; display: flex">
 
 <div style="left: 10px; right: 12.5px">
@@ -61,3 +62,4 @@ body {
 </br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
 </br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
 </br></br></br></br></br></br></br></br></br></br></br></br></br></br>
+</div>
