--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,5 +1,5 @@
 ---
-layout: framework
+layout: framework-home
 sidebar: category-list
 heading: 'Your awesome heading'
 subheading: 'Your awesome subheading'
