--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,9 +16,9 @@ body {
 }
 </style>
 
-<div>
-<div style="left: 0px; position: absolute; padding: 25px; padding-bottom: 100px; display: flex">
 
+<div style="left: 0px; position: absolute; padding: 25px; padding-bottom: 100px; display: flex">
+<div>
 <div style="left: 10px; right: 12.5px">
 <div style="border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #122021; color: #eeeeee; align: right" class="home_site_guide">
   <h1 style="font-size: 27.5px; color: #ffffff">➤ Site Guide</h1>
@@ -56,7 +56,7 @@ body {
   {% include views/pagination.html %}
 
 </div></div></div>
-<div>
+<div style="left:0px; width: 100%">
   {%- include views/footer.html -%}
 </div>
 </div>
