--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,7 +16,7 @@ body {
 }
 </style>
 
-
+<div>
 <div style="left: 0px; position: absolute; padding: 25px; padding-bottom: 100px; display: flex">
 
 <div style="left: 10px; right: 12.5px">
@@ -56,7 +56,7 @@ body {
   {% include views/pagination.html %}
 </div></div>
   
-</div>
+</div></div>
 <div style="left:0px; width: 100%">
   {%- include views/footer.html -%}
 </div>
