--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -57,6 +57,6 @@ body {
 </div></div>
   
 </div></div>
-<div style="left:0px; width: 100%">
+<div style="left:0px; width: 100%; border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #122021; color: #eeeeee; align: right">
   {%- include views/footer.html -%}
 </div>
