--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,7 +16,7 @@ body {
 }
 </style>
 
-<div style="left: 0px; postion: absolute">
+<div style="left: 0px; postion: absolute; min-width: 100%">
 <div style="left: 0px; padding: 25px; padding-bottom: 100px; display: flex">
 
 <div style="left: 10px; right: 12.5px">
