--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,7 +16,7 @@ body {
 }
 </style>
 
-<div style="left: 0px; postion: absolute; min-width: 100%">
+<div style="left: 0px; postion: absolute; width: 100%">
 <div style="left: 0px; padding: 25px; padding-bottom: 100px; display: flex">
 
 <div style="left: 10px; right: 12.5px">
@@ -57,6 +57,6 @@ body {
 </div></div>
   
 </div>
-<div style="left:0px; width: 100%; border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #122021; color: #eeeeee; align: right" class="home_footer_custom">
+<div style="left:0px; width: 100%; border-radius: 10px" class="home_footer_custom">
   {%- include views/footer.html -%}
 </div></div>
