--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,8 +16,7 @@ body {
 }
 </style>
 
-<div class="site-footer h-card"></div>
-<div style="postion: absolute; left: 0px; padding: 25px; padding-bottom: 100px; display: flex">
+<div style="left: 0px; postion: absolute; padding: 25px; padding-bottom: 100px; display: flex">
 
 <div style="left: 10px; right: 12.5px">
 <div style="border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #122021; color: #eeeeee; align: right" class="home_site_guide">
