--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,6 +16,8 @@ body {
 }
 </style>
 
+<div style="width: 100%; left: 12.5px; right: 0px; border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #0c1516; color: #eeeeee; align: left">{{ copyright }} {currentYear} {author}</div>
+<div>
 <div style="left: 0px; postion: absolute; padding: 25px; padding-bottom: 100px; display: flex">
 
 <div style="left: 10px; right: 12.5px">
@@ -55,4 +57,4 @@ body {
   {% include views/pagination.html %}
 </div></div>
   
-</div>
+</div></div>
