--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,3 +1,4 @@
+
 ---
 layout: framework-home
 sidebar: category-list
@@ -16,9 +17,8 @@ body {
 }
 </style>
 
-<div style="width: 100%; left: 12.5px; right: 0px; border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #0c1516; color: #eeeeee; align: left">{{ copyright }} {currentYear} {author}</div>
 <div>
-<div style="left: 0px; postion: absolute; padding: 25px; padding-bottom: 100px; display: flex">
+<div style="left: 0px; position: absolute; padding: 25px; padding-bottom: 100px; display: flex">
 
 <div style="left: 10px; right: 12.5px">
 <div style="border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #122021; color: #eeeeee; align: right" class="home_site_guide">
@@ -45,7 +45,7 @@ body {
 </div></div>
 
 <div style="padding: 6.25px"></div>
-  
+
 <div style="width: 70%; left: 12.5px; right: 0px; border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #0c1516; color: #eeeeee; align: left" class="home_latest_posts">
    <h1 style="font-size: 27.5px; color: #ffffff">➤ Latest Posts</h1>
   <hr></br>
@@ -56,5 +56,5 @@ body {
     {{ content }}
   {% include views/pagination.html %}
 </div></div>
-  
+
 </div></div>
