--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,7 +17,7 @@ body {
 </style>
 
 
-<div style="position: absolute">
+<div style="left: 0px; position: absolute">
 <div style="left: 0px; padding: 25px; padding-bottom: 100px; display: flex">
 
 <div style="left: 10px; right: 12.5px">
