--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -59,6 +59,6 @@ body {
 
 </div>
 
-<div style="left:0px; width: 90%; border-radius: 10px; border: 3px outset #ffffff; color: #eeeeee; align: right">
+<div style="left:0px; width: 100%; border-radius: 10px; border-top: 3px outset #ffffff; color: #eeeeee; align: right">
   {%- include views/footer.html -%}
 </div></div>
