--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,7 +8,7 @@ banner: 'default'
 
 <h1 style="font-family: Faculty Glyphic; text-align: center; font-size: 3.5em; font-weight: bold; text-decoration: underline; color: #ffffff">The PS2 Homebrew Wiki</h1>
 <h1 style="font-size: 1.35em; text-align: center; font-weight: bold; color: #99b6b9">From Apps to Exploits, Games to Mods, the one website for all things PS2 Homebrew</h1>
-</br></br></br>
+</br></br></br></br>
 
 <style>
 body {
@@ -18,10 +18,12 @@ body {
 
 
 <div style="left: 0px; position: absolute">
+<div style="border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #122021; color: #eeeeee>
+  <h3><strong>NEWS:</strong>Open PS2 Loader v1.2.0-Beta-2172 has been realeased on <a href="https://github.com/ps2homebrew/Open-PS2-Loader/releases/tag/latest">GitHub!</a></h3></div>
 <div style="left: 0px; padding: 25px; padding-bottom: 100px; display: flex">
 
 <div style="left: 10px; right: 12.5px">
-<div style="border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #122021; color: #eeeeee; align: right" class="home_site_guide">
+<div style="border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #122021; color: #eeeeee" class="home_site_guide">
   <h1 style="font-size: 27.5px; color: #ffffff">➤ Site Guide</h1>
   <hr></br>
   <h3><a href="https://ps2wiki.github.io/about.html">➽ About</a></h3>
@@ -46,7 +48,7 @@ body {
 
 <div style="padding: 6.25px"></div>
 
-<div style="width: 70%; left: 12.5px; right: 0px; border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #0c1516; color: #eeeeee; align: left" class="home_latest_posts">
+<div style="width: 70%; left: 12.5px; right: 0px; border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #0c1516; color: #eeeeee" class="home_latest_posts">
    <h1 style="font-size: 27.5px; color: #ffffff">➤ Latest Posts</h1>
   <hr></br>
   <div class="articles">
@@ -59,6 +61,6 @@ body {
 
 </div>
 
-<div style="left:0px; width: 100%; border-top: 3px outset #ffffff; color: #eeeeee; align: right">
+<div style="left:0px; width: 100%; border-top: 3px outset #ffffff; color: #eeeeee">
   {%- include views/footer.html -%}
 </div></div>
