--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,10 +17,12 @@ body {
 </style>
 
 
-<div style="left: 0px; position: absolute">
-<div style="border-radius: 10px; padding: 10px; border: 3px outset #ffffff; background-color: #122021; color: #eeeeee">
+<!-- Position --><div style="left: 0px; position: absolute">
+  
+<div style="left: 12.5px; right: 12.5px; border-radius: 10px; padding: 10px; border: 3px outset #ffffff; background-color: #122021; color: #eeeeee">
   <h3><strong>NEWS:</strong> Open PS2 Loader v1.2.0-Beta-2172 has been realeased on <a href="https://github.com/ps2homebrew/Open-PS2-Loader/releases/tag/latest">GitHub!</a></h3></div>
-<div style="left: 0px; padding: 25px; padding-bottom: 100px; display: flex">
+
+<!-- site guide & latest posts --> <div style="left: 0px; padding: 25px; padding-bottom: 100px; display: flex">
 
 <div style="left: 10px; right: 12.5px">
 <div style="border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #122021; color: #eeeeee" class="home_site_guide">
