--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,8 +19,8 @@ body {
 
 <!-- Position --><div style="left: 0px; position: absolute">
   
-<div style="left: 37.5px; right: 37.5px; border-radius: 10px; padding: 10px; border: 3px outset #ffffff; background-color: #122021; color: #eeeeee">
-  <h3><strong>NEWS:</strong> Open PS2 Loader v1.2.0-Beta-2172 has been realeased on <a href="https://github.com/ps2homebrew/Open-PS2-Loader/releases/tag/latest">GitHub!</a></h3></div>
+<div style="padding: 37.5px"><div style="border-radius: 10px; padding: 10px; border: 3px outset #ffffff; background-color: #122021; color: #eeeeee">
+  <h3><strong>NEWS:</strong> Open PS2 Loader v1.2.0-Beta-2172 has been realeased on <a href="https://github.com/ps2homebrew/Open-PS2-Loader/releases/tag/latest">GitHub!</a></h3></div></div>
 
 <!-- site guide & latest posts --> <div style="left: 0px; padding: 25px; padding-bottom: 100px; display: flex">
 
