--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,7 +25,7 @@ body {
 <!-- site guide & latest posts --> <div style="left: 0px; padding: 25px; padding-bottom: 100px; display: flex">
 
 <div style="left: 10px; right: 12.5px">
-<div style="border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #122021; color: #eeeeee" class="home_site_guide">
+<div style="border-radius: 10px; padding-left: 30px; padding-right: 30px; border: 3px outset #ffffff; background-color: #122021; color: #eeeeee" class="home_site_guide">
   <h1 style="font-size: 27.5px; color: #ffffff">➤ Site Guide</h1>
   <hr></br>
   <h3><a href="https://ps2wiki.github.io/about.html">➽ About</a></h3>
