--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,7 +20,7 @@ body {
 <!-- Position --><div style="left: 0px; position: absolute">
   
 <div style="padding-left: 25px; padding-right: 25px"><div style="border-radius: 10px; padding: 10px; border: 3px outset #ffffff; background-color: #134f5c; color: #eeeeee">
-  <h3><strong>NEWS:</strong> Open PS2 Loader v1.2.0-Beta-2172 has been realeased on <a href="https://github.com/ps2homebrew/Open-PS2-Loader/releases/tag/latest">GitHub</a>!</h3></div></div>
+  <img src="https://i.imgur.com/zjBPx0Q.gif"/><h3> Open PS2 Loader v1.2.0-Beta-2172 has been realeased on <a href="https://github.com/ps2homebrew/Open-PS2-Loader/releases/tag/latest">GitHub</a>!</h3></div></div>
 
 <!-- site guide & latest posts --> <div style="left: 0px; padding: 25px; padding-bottom: 100px; display: flex">
 
