--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,6 +25,7 @@ body {
 <!-- site guide & latest posts --> <div style="left: 0px; padding: 25px; padding-bottom: 100px; display: flex">
 
 <div style="left: 10px; right: 12.5px">
+<div>
 <div style="border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #122021; color: #eeeeee" class="home_site_guide">
   <h1 style="font-size: 27.5px; color: #ffffff">➤ Site Guide</h1>
   <hr></br>
@@ -46,6 +47,15 @@ body {
   <h3><a href="https://ps2wiki.github.io/archives.html">➽ Archives</a></h3>
   Yearly site-wide Archive
   </br></br><hr></br>
+</div>
+<div style="border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #122021; color: #eeeeee" class="home_miscellaneous">
+  <h1 style="font-size: 27.5px; color: #ffffff">➤ Miscellaneous</h1>
+  <hr></br>
+  <h3><a href="https://github.com/ps2wiki/ps2wiki.github.io/issues/new?assignees=koraxial&labels=documentation%2Cpost-idea&projects=&template=post-ideas.yml&title=%5BPost+Idea%5D%3A+">➽ Contributing</a></h3>
+  Have new ideas or want to help improve existing stuff? Learn about how you can contribute!
+  </br></br><hr></br>
+  
+
 </div></div>
 
 <div style="padding: 6.25px"></div>
