--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -47,7 +47,7 @@ body {
   <h3><a href="https://ps2wiki.github.io/archives.html">➽ Archives</a></h3>
   Yearly site-wide Archive
   </br></br><hr></br>
-</div>
+</div></br></br>
 <!-- Miscellaneous --> <div style="border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #21292f; color: #eeeeee" class="home_miscellaneous">
   <h1 style="font-size: 27.5px; color: #ffffff">➤ Miscellaneous</h1>
   <hr></br>
