--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -315,6 +315,23 @@ table {
   background-color: $selection-background-color;
 }
 
+/*------------------- Home Post Block -------------------*/
+
+.home_multi_post_block {
+  left: 0px; 
+  padding: 25px; 
+  padding-bottom: 100px; 
+  display: flex
+}
+@media screen and (max-width: 320px) {
+  .home_multi_post_block {
+  left: 0px; 
+  padding: 25px; 
+  padding-bottom: 100px; 
+  display: block
+  }
+}
+  
 /*------------------- ALERTS & WARNINGS -------------------*/
 
 /* warning */
