--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -323,7 +323,7 @@ table {
   padding-bottom: 100px; 
   display: flex
 }
-@media max-width: 400px {
+@media (max-width: 400px) {
   .home_multi_post_block {
   width: 90%;
   display: block; 
