--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -60,7 +60,7 @@ body {
 
 <div style="padding: 6.25px"></div>
 
-<div style="left: 12.5px; right: 12.5px border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #0c1516; color: #eeeeee" class="home_latest_posts">
+<div style="left: 12.5px; right: 12.5px; border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #0c1516; color: #eeeeee" class="home_latest_posts">
    <h1 style="font-size: 27.5px; color: #ffffff">➤ Latest Posts</h1>
   <hr></br>
   <div class="articles">
