--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -331,11 +331,14 @@ table {
   display: block; 
   margin: auto; 
   }
+  .home_siteguide_and_misc_parent {
+  width: 100%;
+  }
   .home_latest_posts {
   left: 0px;
   width: 90%;
   display: block; 
-  margin: auto;
+  margin-right: 12.5px;
   }
 }
   
