--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -328,7 +328,7 @@ table {
     padding: 5px; 
     border: 3px outset #ffffff; 
     background-color: #134f5c; 
-    color: #eeeeee
+    color: #eeeeee;
   }
 @media (max-width: 400px) {
   .home_news_block {
@@ -337,7 +337,7 @@ table {
     padding: 5px; 
     border: 3px outset #ffffff; 
     background-color: #134f5c; 
-    color: #eeeeee
+    color: #eeeeee;
   }
   .home_multi_post_block {
   left: 0px;
