--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,7 +17,7 @@ body {
 </style>
 
 
-<!-- Position --> <div style="width: 50%; position: absolute">
+<!-- Position --> <div style="width: 100%; position: absolute; margin: auto">
   
 <!-- News --> <div style="padding-left: 25px; padding-right: 25px"><div class="home_news_block">
 <img src="https://i.imgur.com/1UZvuCz.gif"/> <strong style="font-size: 1.10em">Open PS2 Loader v1.2.0-Beta-2172 has been released on <a href="https://github.com/ps2homebrew/Open-PS2-Loader/releases/tag/latest">GitHub<sup><i class="fa fa-paperclip"></i></sup></a> !</strong></div></div>
