--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,7 +20,7 @@ body {
 <!-- Position --> <div style="left: 0px; width: 100%; position: absolute; margin: auto">
   
 <!-- News --> <div style="padding-left: 25px; padding-right: 25px"><div class="home_news_block">
-<img src="https://i.imgur.com/1UZvuCz.gif"/> <strong style="font-size: 1.10em">Open PS2 Loader v1.2.0-Beta-2172 has been released on <a href="https://github.com/ps2homebrew/Open-PS2-Loader/releases/tag/latest">GitHub<sup><i class="fa fa-paperclip"></i></sup></a> !</strong></div></div>
+<img src="https://i.imgur.com/1UZvuCz.gif"/><strong style="font-size: 1.10em">Open PS2 Loader v1.2.0-Beta-2172 has been released on <a href="https://github.com/ps2homebrew/Open-PS2-Loader/releases/tag/latest">GitHub<sup><i class="fa fa-paperclip"></i></sup></a> !</strong></div></div>
 
 <!-- Site Guide & Latest Posts --> <div class="home_multi_post_block">
 
@@ -54,8 +54,9 @@ body {
   <h3><a href="https://github.com/ps2wiki/ps2wiki.github.io/issues/new?assignees=koraxial&labels=documentation%2Cpost-idea&projects=&template=post-ideas.yml&title=%5BPost+Idea%5D%3A+">➽ Contributing</a></h3>
   Have new ideas or want to help improve existing stuff? Learn about how you can contribute!
   </br></br><hr></br>
-  
-
+  <h3><a href="https://ps2wiki.github.io">➽ SAS App Archive <sup><img src="https://i.imgur.com/CRNBY5O.gif"/></sup></a></h3>
+  The one place to download all* PS2 Apps!
+  <sub>*Only MC installable apps available</sub>
 </div></div></div></br>
   
 <div style="padding: 6.25px"></div>
