--- a/_sass/misc/theme-toggle.scss
+++ b/_sass/misc/theme-toggle.scss
@@ -3,7 +3,7 @@
   width: $base-font-size * 7.65;
   margin-top: 10px;
   margin-right: 20px;
-  margin-left: auto;
+  margin-left: 20px;
   transition: .3s cubic-bezier(.4,.03,0,1);
 
   label, .toggle {
