--- a/_includes/extensions/theme-toggle.html
+++ b/_includes/extensions/theme-toggle.html
@@ -4,7 +4,7 @@
     <div class="toggle"></div>
     <div class="names">
       <p class="light">☀️</p>
-      <p class="dark">  🌙</i></p>
+      <p class="dark">🌙</p>
     </div>
   </label>
 </div>
