--- a/_sass/misc/theme-toggle.scss
+++ b/_sass/misc/theme-toggle.scss
@@ -20,7 +20,7 @@
     position: absolute;
     width: 50%;
     height: 100%;
-    background-color: #fff2cc;
+    background-color: #f9cb9c;
     box-shadow: 0 2px 15px rgba(0,0,0,.15);
     transition: transform .2s cubic-bezier(0.25, 0.46, 0.45, 0.94);
   }
