Add link to 'Contributing' repository

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -51,7 +51,7 @@ body {
 <!-- Miscellaneous --> <div style="right: 12.5px; border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #21292f; color: #eeeeee" class="home_miscellaneous">
   <h1 style="font-size: 27.5px; color: #ffffff">➤ Miscellaneous</h1>
   <hr></br>
-  <h3><a href="https://github.com/ps2wiki/ps2wiki.github.io/issues/new?assignees=koraxial&labels=documentation%2Cpost-idea&projects=&template=post-ideas.yml&title=%5BPost+Idea%5D%3A+">➽ Contributing</a></h3>
+  <h3><a href="https://github.com/ps2wiki/Contributing">➽ Contributing</a></h3>
   Have new ideas or want to help improve existing stuff? Learn about how you can contribute!
   </br></br><hr></br>
   <h3><a href="https://ps2wiki.github.io">➽ SAS App Archive <sup><img height="12.5" src="https://i.imgur.com/kH2Rhu6.gif"/></sup></a></h3>
