--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -382,6 +382,17 @@ table {
   margin-bottom: 15px;
 }
 
+/* tos */
+.note {
+  padding: 20px;
+  background-color: #674ea7; 
+  border-radius: 5px
+  border-style: outset;
+  border-color: 4f515c;
+  color: white;
+  margin-bottom: 15px;
+}
+
 /* close button */
 .clbtn {
   margin-left: 15px;
