--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -383,10 +383,10 @@ table {
 }
 
 /* tos */
-.note {
+.tos {
   padding: 20px;
   background-color: #674ea7; 
-  border-radius: 5px
+  border-radius: 5px;
   border-style: outset;
   border-color: 4f515c;
   color: white;
