--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,6 +6,11 @@ subheading: 'Your awesome subheading'
 banner: 'default'
 ---
 
+<!-- Page begins -->
+<h1 style="font-family: Faculty Glyphic; text-align: center; font-size: 3.5em; font-weight: bold; text-decoration: underline; color: #ffffff">The PS2 Homebrew Wiki</h1>
+<h1 style="font-size: 1.35em; text-align: center; font-weight: bold; color: #99b6b9">From Apps to Exploits, Games to Mods, the one website for all things PS2 Homebrew</h1>
+</br></br></br></br></br>
+
 <!-- Terms of Service Notice -->
 <div id="termsofservice" class="tos">
   <span class="clbtn" onclick="this.parentElement.style.display='none';"></span>
@@ -15,14 +20,9 @@ banner: 'default'
   setTimeout(()=>{
     const tos=document.getElementById('termsofservice');
     tos.style.display='none' ;
-  },5000);
-</script>
+  },10000);
+</script></br>
 
-
-<!-- Page begins -->
-<h1 style="font-family: Faculty Glyphic; text-align: center; font-size: 3.5em; font-weight: bold; text-decoration: underline; color: #ffffff">The PS2 Homebrew Wiki</h1>
-<h1 style="font-size: 1.35em; text-align: center; font-weight: bold; color: #99b6b9">From Apps to Exploits, Games to Mods, the one website for all things PS2 Homebrew</h1>
-</br></br></br></br></br>
 
 <style>
 body {
