--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -384,12 +384,13 @@ table {
 
 /* tos */
 .tos {
-  padding: 20px;
-  background-color: #674ea7; 
+  padding: 15px;
+  background-color: #9c8dc2; 
   border-radius: 5px;
   border-style: outset;
-  border-color: 4f515c;
-  color: white;
+  border-color: #4f515c;
+  color: wheat;
+  float: center;
   margin-bottom: 15px;
 }
 
